Add color switch

--- a/settings.json
+++ b/settings.json
@@ -1,6 +1,8 @@
 {
     "default_color": 36000,
+    "secondary_color": 15000,
     "default_sat": 254,
+    "secondary_sat": 100,
     "host_name": "192.168.1.3",
     "hue_url": "http://192.168.1.2/api/2e1bee357280d2a6b7a47a03030a3ee",
     "party_delay": 0.25,
